# ChangeLog for games-fps/vavoom
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jun 2008; Davide Cendron (scen) <scen@gentoo.org>
  -vavoom-1.27.1.ebuild, +vavoom-1.28.ebuild:
  Version bump

  15 Apr 2008; Davide Cendron (scen) <scen@gentoo.org> -vavoom-1.27.ebuild,
  +vavoom-1.27.1.ebuild:
  Version bump

  07 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  vavoom-1.27.ebuild, vavoom-9999.ebuild:
  Fix quotation

  06 Apr 2008; Davide Cendron (scen) <scen@gentoo.org>
  -files/vavoom-makefile_nowrapper.patch, -files/vavoom_cmake_build.patch:
  Really nuke files dir

  05 Apr 2008; Davide Cendron (scen) <scen@gentoo.org> -vavoom-1.26.ebuild,
  +vavoom-1.27.ebuild, vavoom-9999.ebuild:
  Version bump (removing also unnecessary patch files)

  04 Feb 2008; Davide Cendron (scen) <scen@gentoo.org> vavoom-1.26.ebuild:
  Removed unneeded patch that broke ebuild unpack process

  02 Feb 2008; Davide Cendron (scen) <scen@gentoo.org> vavoom-9999.ebuild:
  Fixed dependencies plus some tidyup

  02 Feb 2008; Davide Cendron (scen) <scen@gentoo.org>
  files/vavoom_cmake_build.patch, vavoom-1.26.ebuild, vavoom-9999.ebuild:
  Updated cmake patch to reflect upstream changes. Introduced use of EAPI, and
  enabling "sdl" USE flag by default. Readded "vorbis" USE flag in SVN live
  ebuild, because a user would can enable Vorbis support, but not install the
  enhanced music files (see previous change by jakub); if "music" is on, and
  "vorbis" is off, Vorbis support is forcibly enabled.

  31 Jan 2008; Davide Cendron (scen) <scen@gentoo.org>
  +files/vavoom_cmake_build.patch, vavoom-9999.ebuild:
  Upstream has switched build system to CMake, so i've changed the SVN live
  ebuild accordingly

  21 Jan 2008; Davide Cendron (scen) <scen@gentoo.org>
  -files/vavoom-1.25_flac-1.2_fix.patch, -vavoom-1.25.ebuild,
  +vavoom-1.26.ebuild:
  Version bump

  13 Jan 2008; Jakub Moc <jakub@gentoo.org> vavoom-1.25.ebuild,
  vavoom-9999.ebuild: