@@ -1,5 +1,5 @@
 DIST vavoom-1.28.tar.bz2 1608334 RMD160 f40523e1ad52dfdee81ddbda870af41a237e1ba9 SHA1 64a1449d6d49e3fdd7732203f4475eeeb1bb4112 SHA256 3553393f20d2da0d2a2ba23008f56b10aee12b8034d71dcc53cce9bc40ae1172
 EBUILD vavoom-1.28.ebuild 6446 RMD160 e00e1cda574491aaf0d5a4d19394202c71a50d3b SHA1 df7e705c55d5c3998f33952d18ca97a5fdc798d5 SHA256 7b2c7edfd0aa22dda4a0ba0d4b1e8614899999c869ef0164714abc84fc534258
 EBUILD vavoom-9999.ebuild 6496 RMD160 2e02d0ef61945bdd26bad52eef9a53c2fc418fcc SHA1 b3b40d197bff0be9746fe977d6572c017d5e6184 SHA256 a41ed8ee13d14c56bf602d1d8bcbe9e2b45ede5d00cd206b845ca3ce3ae750d2
-MISC ChangeLog 4824 RMD160 7dfbc7c77a1ff310a67cc7387e75506cf46c7484 SHA1 3454b677705da56d34edd9d9bef06bcab814e6f7 SHA256 1a7cf89c65d28caf7918708735ed48bed8e50694586a10e5f952961c57fe589e
-MISC metadata.xml 303 RMD160 626272995441b20fd23b1d0a94603e98b97b0f1e SHA1 f3cae1ec3568e7717d7265a58d0b2e6d8efe88b5 SHA256 334d9b64af3b010a9fcdcbd8736eba2f81ff9d87dee3eb76b5adacb7d48afa37
+MISC ChangeLog 4945 RMD160 f5f813a9b8b63688a88d5f525ecfe5e0dacf2d2f SHA1 eb1654f1ac9145516efa14c87d1870797cd227c5 SHA256 adee55981591bfd28373a657d1a3643079b9f491eaa6b15a414de209453b6941
+MISC metadata.xml 784 RMD160 7118f286424a11e6d3b9cba9faf427c8d809e3a2 SHA1 084945d85aa36a290b7dbaa742c8bcb6bf3164c8 SHA256 b5b7bc5449d50f3e34441cce1c8c350cdbe050d3bf4a3ee7766ef61c3b51d995
